		Mark Anderson <mark@panonet.net>
		CNI Patch to avoid having the SIGPWR signal interrupt select()
		Mark Anderson <mark@panonet.net>
		CNI debug message cleanups and fd fix
		Mark Anderson <mark@panonet.net>
		Dont override system properties 
		Klaus Kierer <klaus.kierer@tiscover.com>
		W32 build fixes and Locking fixes
		Dave Acker <dacker@nomadio.net>
		Mac OS X auto* build fixes

2.1-7pre21 Oct 16 2004
		dereferencing type-punned pointer will break strict-aliasing
		rules.  Fixed.
2.1-7pre20 Oct 16 2004
		x86_64 Linux Fixes fixes BlackBox Serial now runs
		switch to JNI_VERSION_1_2 -- many people are still using
		1.3 JREs
2.1-7pre19 Oct 12 2004
		Thread safer nativeDrain()/flush() method.
		Philip Gladstone <philip@gladstonefamily.net>
		Don't look for unexpected lockfiles in expected places
		Philip Gladstone <philip@gladstonefamily.net>
		adding the new properties gnu.io.rxtx.SerialPorts and
		gnu.io.rxtx.ParallelPorts insead of overriding the system
		properties and uses them only as default values
		Klaus Kierer <klaus.kierer@tiscover.com>
2.1-7pre18 Oct 11 2004
		release locks when device is unavailable.
		Tico Ballagas <ballagas@cs.rwth-aachen.de>
		J2SE java.util.loggin and property file to match
		Stephane Cachat <stephane@cachat.org>
		termios stack overflow fix for Linux caused by including
		termbits.h
		Bill Holmes <weh@super.org>
		Support for USB frobs in Linux (reports are that this does not
		work exactly as expected with some kernels)
		Christopher R. Wren <wren@merl.com>
		configure fix for jdk 1.5
2.1-7pre17 Oct 17, 2003
		merged with 2.0 and took small changes from cvs.
2.1-7pre16 Mar 27, 2003
		remove debug "Condition" warnings used to debug NT4 issues.
2.1-7pre15a
		build without requiring rxtxZystem.dll.  Add back the
		TIOCGICOUNT #define for breaks.
2.1-7pre15
		100 fold speedup of read(byte) and read(byte[] ...)
		10 fold speedup of available()
		implementented read(byte[],offset,length,terminator[2]);
		-- not tested.
2.1-7pre14